# Practice-Codes-1

./: .env  .gitignore  assert.py  controls.py  database.py  models.py  multi_threading_class.py  multi_threading_fuction.py  requirments.txt  singleton.py  student.py
auth_service/: alembic.ini  pyproject.toml
auth_service/auth_server/: alembic.ini  dependencies.py  exceptions.py  globals.py  main.py  middleware.py  settings.py  utils.py
auth_service/auth_server/alembic/: env.py  script.py.mako
auth_service/auth_server/alembic/versions/: 64d1f9f09c4b_initial_auth_tables.py  e88457ab8dca_create_auth_tables.py
auth_service/auth_server/models/: constraints.py  db_base.py  db_factory.py  db_postgres.py  enums.py  migrator.py  models.py
auth_service/auth_server/routers/: __init__.py  assignment.py  base.py  role.py  token.py  type.py  user.py
auth_service/auth_server/schemas/: assignment.py  base.py  role.py  token.py  type.py  user.py
auth_service/auth_server/services/: assignment.py  base.py  role.py  token.py  type.py  user.py
core_service/: pyproject.toml
core_service/core_apis_server/: alembic.ini  dependencies.py  exceptions.py  globals.py  main.py  middleware.py  settings.py  utils.py
core_service/core_apis_server/alembic/: env.py
core_service/core_apis_server/models/: constraints.py  db_base.py  db_factory.py  db_postgres.py  enums.py  migrator.py  models.py
core_service/core_apis_server/routers/: __init__.py  base.py  member.py  organization.py  team.py
core_service/core_apis_server/schemas/: base.py  member.py  organization.py  team.py
(+5 files in other folders)
