[project]
name = "auth-service"
version = "1.0.0"
description = "Auth Service for Organization & Teams Management"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pydantic[email]>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "tenacity>=8.2.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"